--- a/server/templates/server/base.html
+++ b/server/templates/server/base.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang='en'>
 <head>
     {% load static %}
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- load bootstrap -->
-    <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC' crossorigin='anonymous'>
-    <script src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js' integrity='sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM' crossorigin='anonymous'></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
     <link rel='shortcut icon' type='image/png' href="{% static 'server/favicon.ico' %}"/>
     <link rel='stylesheet' href="{% static 'server/css/base.css' %}">
@@ -12,16 +13,27 @@
     {% block extrahead %}{% endblock %}
 <head>
 <body>
-    <nav class='navbar navbar-expand-lg'>
-        <div class='container-fluid'>
-            <a class='navbar-brand' href='/checklist/' style='color: inherit; text-decoration: inherit;'>
-                <img src="{% static 'server/Orange-Button.png' %}" id='navbar-logo'/>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/checklist/">
+                <img src="{% static 'server/Orange-Button.png' %}" id='navbar-logo' alt='Orange Button logo'>
                 <strong>Checklist Registry</strong>
             </a>
-            <button class='navbar-toggler' type='button' data-bs-toggle='collapse' data-bs-target='#navbarSupportedContent' aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation'>
-                <span class='navbar-toggler-icon'></span>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
             </button>
-            <div class='collapse navbar-collapse' id='navbarSupportedContent'>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/checklist/">Templates</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/checklist/">Maintainers</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/checklist/">Contributing</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </nav>
@@ -32,9 +44,9 @@
         {% block main %}{% endblock %}
     </div>
     <div class='container'>
-        {% block footer %}
-            <div style='margin-top: 10rem' />
-        {% endblock %}
+        {% block footer %}{% endblock %}
+            <!-- <div style='margin-top: 10rem' /> -->
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
