--- a/server/templates/server/checklist_detail.html
+++ b/server/templates/server/checklist_detail.html
@@ -2,7 +2,7 @@
 
 {% block header %}
 <div class='container'>
-    <h1 class='h2'>
+    <h1 class='h3'>
         Checklist: {{ checklist_template.ChecklistTemplateName_Value }}
     </h1>
 </div>
@@ -10,31 +10,29 @@
 
 {% block main %}
 <div class='container'>
-    {% for section, questions in sections_and_questions.items %}
-    <table class='table'>
-        <thead>
-            <tr>
-                <th scope='col' class='h4'>Section {{ forloop.counter }}: {{ section }}</th>
-                <th scope='col'></th>
-            </tr>
-        </thead>
-        <tbody>
-            {% with section_counter=forloop.counter %}
-            {% for question in questions %}
-                <tr>
-                    <th scope='row'>{{ section_counter }}.{{ forloop.counter|stringformat:"02d" }}: {{ question.QuestionLabel_Value }}</th>
-                    <td>
-                        <select class="form-select" style='width: 20em' aria-label="Default select example">
-                        {% for option in question.AnswerOptions.values %}
-                            <option value="{{ forloop.counter }}">{{ option.Value }}</option>
-                        {% endfor %}
-                        </select>
-                    </td>
-                </tr>
+    {% for section, questions_and_fields in sections_and_questions.items %}
+        <div class='row'>
+            <div class='col'>
+                <h5 style='margin-bottom: 0rem; margin-top: .5rem'>
+                Section {{ forloop.counter }}: {{ section }}
+                </h5>
+                <hr style='margin-top: 0rem'>
+            </div>
+        </div>
+        {% with section_counter=forloop.counter %}
+            {% for question, field in questions_and_fields %}
+                <div class='row gx-5 px-4 justify-content-start'>
+                    <div class='col-5'>
+                        <h6>{{ section_counter }}.{{ forloop.counter|stringformat:"02d" }}: {{ question.QuestionLabel_Value }}</h6>
+                    </div>
+                    <div class='col-4'>
+                    <div class='input-group'>
+                        {{ field }}
+                    </div>
+                    </div>
+                </div>
             {% endfor %}
-            {% endwith %}
-        </tbody>
-    </table>
+        {% endwith %}
     {% endfor %}
 </div>
 {% endblock %}
