--- a/server/templates/server/checklist_detail.html
+++ b/server/templates/server/checklist_detail.html
@@ -23,7 +23,7 @@
             {% for question, field in questions_and_fields %}
                 <div class='row gx-5 px-4 justify-content-start'>
                     <div class='col-5'>
-                        <h6>{{ section_counter }}.{{ forloop.counter|stringformat:"02d" }}: {{ question.QuestionLabel_Value }}</h6>
+                        <label class='h6' for='{{ field.id_for_label }}'>{{ section_counter }}.{{ forloop.counter|stringformat:"02d" }}: {{ question.QuestionLabel_Value }}</h6>
                     </div>
                     <div class='col-4'>
                     <div class='input-group'>
