--- a/server/templates/server/base.html
+++ b/server/templates/server/base.html
@@ -12,7 +12,7 @@
     <title>{% block title %}Checklist Registry{% endblock %}</title>
     {% block extrahead %}{% endblock %}
 <head>
-<body>
+<body data-bs-spy="scroll" data-bs-target="#checklist-template-toc" data-bs-smooth-scroll="true" tabindex="0">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="/checklist/">
