--- a/server/templates/server/base.html
+++ b/server/templates/server/base.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- load bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 
     <link rel='shortcut icon' type='image/png' href="{% static 'server/favicon.ico' %}"/>
     <link rel='stylesheet' href="{% static 'server/css/base.css' %}">
-    <title>{% block title %}Checklist Registry{% endblock %}</title>
+    <title>{% block title %}Checklist Template Registry{% endblock %}</title>
     {% block extrahead %}{% endblock %}
 <head>
 <body data-bs-spy="scroll" data-bs-target="#checklist-template-toc" data-bs-smooth-scroll="true" tabindex="0">
@@ -17,7 +18,7 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="/checklist/">
                 <img src="{% static 'server/Orange-Button.png' %}" id='navbar-logo' alt='Orange Button logo'>
-                <strong>Checklist Registry</strong>
+                <strong>Checklist Template Registry</strong>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -25,7 +26,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/checklist/">Templates</a>
+                        <a class="nav-link active" aria-current="page" href="/checklist/">Checklist Templates</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="/checklist/">Maintainers</a>
@@ -40,9 +41,7 @@
     <div class='container'>
         {% block header %}{% endblock %}
     </div>
-    <div class='container'>
-        {% block main %}{% endblock %}
-    </div>
+    {% block main %}{% endblock %}
     <div class='container'>
         {% block footer %}{% endblock %}
             <!-- <div style='margin-top: 10rem' /> -->
