--- a/server/templates/server/base.html
+++ b/server/templates/server/base.html
@@ -10,15 +10,15 @@
 
     <link rel='shortcut icon' type='image/png' href="{% static 'server/favicon.ico' %}"/>
     <link rel='stylesheet' href="{% static 'server/css/base.css' %}">
-    <title>{% block title %}Checklist Template Registry{% endblock %}</title>
+    <title>{% block title %}Checklist Registry{% endblock %}</title>
     {% block extrahead %}{% endblock %}
 <head>
 <body data-bs-spy="scroll" data-bs-target="#checklist-template-toc" data-bs-smooth-scroll="true" tabindex="0">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar nav-underline navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="/checklist/">
                 <img src="{% static 'server/Orange-Button.png' %}" id='navbar-logo' alt='Orange Button logo'>
-                <strong>Checklist Template Registry</strong>
+                <strong>Checklist Registry</strong>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -26,13 +26,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/checklist/">Checklist Templates</a>
+                        <a class="nav-link" aria-current="page" href="/checklist/">Checklist Templates</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/checklist/">Maintainers</a>
+                        <a class="nav-link" aria-current="page" href="/checklist/">Maintainers</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/checklist/">Contributing</a>
+                        <a class="nav-link" aria-current="page" href="/checklist/">How to Contribute</a>
                     </li>
                 </ul>
             </div>
