--- a/server/templates/server/checklist_detail.html
+++ b/server/templates/server/checklist_detail.html
@@ -4,9 +4,9 @@
 {% endblock %}
 
 {% block main %}
-<div class='container ms-5 me-0 mt-3 mb-4'>
+<div class='container ms-2 me-0 mt-3 mb-4'>
 <div class='row justify-content-start'>
-    <div class='col-3 me-5'>
+    <div class='col-3 me-0'>
         <div class='sticky-top'>
             <div class='row'>
                 <div class='col'>
@@ -18,13 +18,6 @@
                         </a>
                         {% endfor %}
                     </div>
-                </div>
-            </div>
-            <div class='row mt-3'>
-                <div class='col text-center'>
-                    <button type='button' class='btn btn-warning mt-2'>
-                        <i class='bi bi-download'></i> Download OB JSON
-                    </button>
                 </div>
             </div>
             <div class='row mt-3'>
@@ -46,28 +39,33 @@
             </div>
         </div>
     </div>
-    <div class='col-8'>
+    <div class='col-9'>
         <div class='row'>
-            <div class='col'>
+            <div class='col-7'>
                 <h1 class='h3'>
                     Checklist Template:
                     <button class="btn btn-outline-primary btn-lg dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                         {{ checklist_template.ChecklistTemplateName_Value }}
                     </button>
-                    <ul class="dropdown-menu">
-                        {% for checklist_template_name, checklist_template_id in other_checklist_templates %}
-                            <li>
-                                <a
-                                    class='dropdown-item {% if checklist_template_name == checklist_template.ChecklistTemplateName_Value %}active{% endif %}'
-                                    href='{% url 'detail' checklist_template_id %}'
-                                    {% if checklist_template_name == checklist_template.ChecklistTemplateName_Value %}aria-current='true'{% endif %}
-                                >
-                                    {{ checklist_template_name }}
-                                </a>
-                            </li>
-                        {% endfor %}
-                    </ul>
                 </h1>
+                <ul class="dropdown-menu">
+                    {% for checklist_template_name, checklist_template_id in other_checklist_templates %}
+                    <li>
+                        <a
+                            class='dropdown-item {% if checklist_template_name == checklist_template.ChecklistTemplateName_Value %}active{% endif %}'
+                            href='{% url 'detail' checklist_template_id %}'
+                            {% if checklist_template_name == checklist_template.ChecklistTemplateName_Value %}aria-current='true'{% endif %}
+                            >
+                            {{ checklist_template_name }}
+                        </a>
+                    </li>
+                    {% endfor %}
+                </ul>
+            </div>
+            <div class='col text-end'>
+                <button type='button' class='btn btn-warning btn-lg ms-5'>
+                    <i class='bi bi-download'></i> Download OB JSON
+                </button>
             </div>
         </div>
         {% for section, questions_and_fields in sections_and_questions.items %}
