adjust text wrapping in checklist template question label dropdowns

--- a/server/static/server/css/base.css
+++ b/server/static/server/css/base.css
@@ -16,4 +16,6 @@
     --bs-btn-border-color: none;
     padding-top: .2rem;
     padding-bottom: .2rem;
+    white-space: wrap;
+    text-align: left;
 }
