--- a/server/templates/server/checklist_detail.html
+++ b/server/templates/server/checklist_detail.html
@@ -101,6 +101,7 @@
                         </button>
                         <div class='collapse' id='collapse-{{ field.id_for_label}}'>
                             <div class='card card-body'>
+                                <h6 class='text-start'>Help</h6>
                                 {{ question.QuestionHelp_Value }}
                             </div>
                         </div>
