--- a/server/static/server/css/base.css
+++ b/server/static/server/css/base.css
@@ -14,8 +14,9 @@
 .checklist-template-question-label-collapse-btn {
     --bs-btn-color: none;
     --bs-btn-border-color: none;
-    padding-top: .2rem;
-    padding-bottom: .2rem;
+    padding-top: .0rem;
+    padding-bottom: .0rem;
     white-space: wrap;
     text-align: left;
+    font-weight: bold;
 }
