--- a/server/templates/server/checklist_detail.html
+++ b/server/templates/server/checklist_detail.html
@@ -58,7 +58,7 @@
                         <li>
                             <a
                                 class='dropdown-item {% if checklist_template_name == checklist_template.ChecklistTemplateName_Value %}active{% endif %}'
-                                href='{% url 'detail' checklist_template_id %}'
+                                href='{% url 'server:checklisttemplate-detail' checklist_template_id %}'
                                 {% if checklist_template_name == checklist_template.ChecklistTemplateName_Value %}aria-current='true'{% endif %}
                                 >
                                 {{ checklist_template_name }}
@@ -72,7 +72,7 @@
                 <a
                     type='button'
                     class='btn btn-warning btn-lg ms-5'
-                    href='{% url 'json' checklist_template.ChecklistTemplateID_Value %}'
+                    href='{% url 'server:checklisttemplate-json' checklist_template.ChecklistTemplateID_Value %}'
                 >
                     <i class='bi bi-download'></i> Download OB JSON
                 </a>
