adding maintainer detail and list

--- a/server/templates/server/base.html
+++ b/server/templates/server/base.html
@@ -2,50 +2,45 @@
 <html lang='en'>
 <head>
     {% load static %}
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset='utf-8'>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
     <!-- load bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB' crossorigin='anonymous'>
+    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css'>
 
-    <link rel='shortcut icon' type='image/png' href="{% static 'server/favicon.ico' %}"/>
-    <link rel='stylesheet' href="{% static 'server/css/base.css' %}">
+    <link rel='shortcut icon' type='image/png' href='{% static 'server/favicon.ico' %}'/>
+    <link rel='stylesheet' href='{% static 'server/css/base.css' %}'>
     <title>{% block title %}Checklist Registry{% endblock %}</title>
     {% block extrahead %}{% endblock %}
 <head>
-<body data-bs-spy="scroll" data-bs-target="#checklist-template-toc" data-bs-smooth-scroll="true" tabindex="0">
-    <nav class="navbar nav-underline navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/checklist/">
-                <img src="{% static 'server/Orange-Button.png' %}" id='navbar-logo' alt='Orange Button logo'>
+<body>
+    <nav class='navbar nav-underline navbar-expand-lg bg-body-tertiary'>
+        <div class='container-fluid'>
+            <a class='navbar-brand' href='{% url 'checklisttemplate:index' %}'>
+                <img src='{% static 'server/Orange-Button.png' %}' id='navbar-logo' alt='Orange Button logo'>
                 <strong>Checklist Registry</strong>
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+            <button class='navbar-toggler' type='button' data-bs-toggle='collapse' data-bs-target='#navbarNav' aria-controls='navbarNav' aria-expanded='false' aria-label='Toggle navigation'>
+                <span class='navbar-toggler-icon'></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="/checklist/">Checklist Templates</a>
+            <div class='collapse navbar-collapse' id='navbarNav'>
+                <ul class='navbar-nav'>
+                    <li class='nav-item'>
+                        <a class='nav-link' aria-current='page' href='{% url 'checklisttemplate:index' %}'>Checklist Templates</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="/checklist/">Maintainers</a>
+                    <li class='nav-item'>
+                        <a class='nav-link' aria-current='page' href='{% url 'maintainer:list' %}'>Maintainers</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="/checklist/">How to Contribute</a>
+                    <li class='nav-item'>
+                        <a class='nav-link' aria-current='page' href='#'>How to Contribute</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <div class='container'>
-        {% block header %}{% endblock %}
-    </div>
+    {% block header %}{% endblock %}
     {% block main %}{% endblock %}
-    <div class='container'>
-        {% block footer %}{% endblock %}
-            <!-- <div style='margin-top: 10rem' /> -->
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    {% block footer %}{% endblock %}
+    <script src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js' integrity='sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI' crossorigin='anonymous'></script>
 </body>
 </html>
