--- a/server/static/server/css/base.css
+++ b/server/static/server/css/base.css
@@ -11,6 +11,10 @@
     padding-top: .2rem;
     padding-bottom: .2rem;
 }
+.btn-short {
+    padding-top: .0rem;
+    padding-bottom: .0rem;
+}
 .checklist-template-question-label-collapse-btn {
     --bs-btn-color: none;
     --bs-btn-border-color: none;
