--- a/server/templates/server/checklist_detail.html
+++ b/server/templates/server/checklist_detail.html
@@ -1,10 +1,9 @@
 {% extends 'server/base.html' %}
 
-{% block header %}
-{% endblock %}
+{% block title %}{{ checklist_template.ChecklistTemplateName_Value}} - {{ block.super }}{% endblock %}
 
 {% block main %}
-<div class='container ms-2 me-0 mt-3 mb-4'>
+<div data-bs-spy="scroll" data-bs-target="#checklist-template-toc" data-bs-smooth-scroll="true" tabindex="0" class='container ms-2 me-0 mt-3 mb-4'>
 <div class='row justify-content-start'>
     <div class='col-3 me-0'>
         <div class='sticky-top'>
@@ -25,7 +24,10 @@
                     <h5>Checklist Template Information</h5>
                     <h6>
                         Maintainer:
-                        <a class='link-opacity-100' href='#'>
+                        <a
+                            class='link-opacity-100'
+                            href='{% url 'maintainer:detail' checklist_template.ChecklistTemplateMaintainer.ChecklistTemplateMaintainerID_Value %}'
+                        >
                             {{ checklist_template.ChecklistTemplateMaintainer.ChecklistTemplateMaintainerName_Value }}
                         </a>
                     </h6>
@@ -58,7 +60,7 @@
                         <li>
                             <a
                                 class='dropdown-item {% if checklist_template_name == checklist_template.ChecklistTemplateName_Value %}active{% endif %}'
-                                href='{% url 'server:checklisttemplate-detail' checklist_template_id %}'
+                                href='{% url 'checklisttemplate:detail' checklist_template_id %}'
                                 {% if checklist_template_name == checklist_template.ChecklistTemplateName_Value %}aria-current='true'{% endif %}
                                 >
                                 {{ checklist_template_name }}
@@ -72,7 +74,7 @@
                 <a
                     type='button'
                     class='btn btn-warning btn-lg ms-5'
-                    href='{% url 'server:checklisttemplate-json' checklist_template.ChecklistTemplateID_Value %}'
+                    href='{% url 'checklisttemplate:json' checklist_template.ChecklistTemplateID_Value %}'
                 >
                     <i class='bi bi-download'></i> Download OB JSON
                 </a>
