add how to contribute page

--- a/server/templates/server/base.html
+++ b/server/templates/server/base.html
@@ -32,7 +32,7 @@
                         <a class='nav-link' aria-current='page' href='{% url 'maintainer:list' %}'>Maintainers</a>
                     </li>
                     <li class='nav-item'>
-                        <a class='nav-link' aria-current='page' href='#'>How to Contribute</a>
+                        <a class='nav-link' aria-current='page' href='{% url 'checklisttemplate:how-to-contribute' %}'>How to Contribute</a>
                     </li>
                 </ul>
             </div>
