--- a/server/templates/server/how_to_contribute.html
+++ b/server/templates/server/how_to_contribute.html
@@ -1,5 +1,7 @@
 {% extends 'server/base.html' %}
 
+{% block navbar-how-to-contribute-active %}active{% endblock %}
+
 {% block main %}
 <div class='container mt-3 mb-4'>
     <h1>How to Contribute</h1>
