--- a/server/templates/server/maintainer_list.html
+++ b/server/templates/server/maintainer_list.html
@@ -1,5 +1,7 @@
 {% extends 'server/base.html' %}
 
+{% block navbar-maintainers-active %}active{% endblock %}
+
 {% block main %}
 <div class='container mt-3 mb-4'>
     <h1>Checklist Template Maintainers</h1>
