--- a/server/templates/server/base.html
+++ b/server/templates/server/base.html
@@ -26,13 +26,13 @@
             <div class='collapse navbar-collapse' id='navbarNav'>
                 <ul class='navbar-nav'>
                     <li class='nav-item'>
-                        <a class='nav-link' aria-current='page' href='{% url 'checklisttemplate:index' %}'>Checklist Templates</a>
+                        <a class='nav-link {% block navbar-checklist-templates-active %}{% endblock %}' aria-current='page' href='{% url 'checklisttemplate:index' %}'>Checklist Templates</a>
                     </li>
                     <li class='nav-item'>
-                        <a class='nav-link' aria-current='page' href='{% url 'maintainer:list' %}'>Maintainers</a>
+                        <a class='nav-link {% block navbar-maintainers-active %}{% endblock %}' aria-current='page' href='{% url 'maintainer:list' %}'>Maintainers</a>
                     </li>
                     <li class='nav-item'>
-                        <a class='nav-link' aria-current='page' href='{% url 'checklisttemplate:how-to-contribute' %}'>How to Contribute</a>
+                        <a class='nav-link {% block navbar-how-to-contribute-active %}{% endblock %}' aria-current='page' href='{% url 'checklisttemplate:how-to-contribute' %}'>How to Contribute</a>
                     </li>
                 </ul>
             </div>
